# adhesionPred

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  Changes.md  README.md  adhesion_pred.py  pyproject.toml  requirements.txt
.github/workflows/: publish_release.yml  version_bump.yml
models/: adhesion_model_esm2_t12_35M_UR50D.pkl  adhesion_model_esm2_t6_8M_UR50D.pkl
scripts/: evaluate.py  predict.py  train.py
src/adhesionPredict/: features.py  io.py
src/adhesion_predict/: __init__.py  config.py  embeddings.py  io.py  model.py
src/adhesion_predict/scripts/: __init__.py  evaluate.py  predict.py  train.py
stage/: download.sh  filter_blast_results.py  get_hits.sh
stage/negtraining/: download.sh  generate_faa.sh  sample_ids_from_fasta.py  search.sh
tests/: test_adhesion_pred.py
tests/input_tests/: Saccharomyces.pep
