[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adhesion_predict"
version = "0.1.0"
description = "A bioinformatics package for predicting adhesion proteins using ESM-2 embeddings"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.81",
    "numpy>=1.20",
    "torch",
    "fair-esm",
    "scikit-learn",
    "tqdm",
    "torchvision",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "N803", "N806", "N999"]
