[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Configuration for CLI scripts
# Script prefix is defined below as "adhesion_" and is automatically prepended to all script names
# To change the prefix, update the [project.scripts] section entries

[project]
name = "adhesion_predict"
description = "A bioinformatics package for predicting adhesion proteins using ESM-2 embeddings"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.81",
    "numpy>=1.20",
    "torch",
    "fair-esm",
    "scikit-learn",
    "tqdm",
    "torchvision",
]
license = { file = "LICENSE" }
dynamic = ["version"]

[project.scripts]
adhesion_predict = "adhesion_predict.scripts.predict:cli"
adhesion_train = "adhesion_predict.scripts.train:cli"
adhesion_evaluate = "adhesion_predict.scripts.evaluate:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "N803", "N806", "N999"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.1.0"
